<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SavingsActivity">

    <EditText
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/sum"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />


    <EditText
        android:id="@+id/time"
        android:hint="@string/time"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/bank"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/bank" />

    <Button
        android:id="@+id/rate"
        android:text="@string/rate"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/open"
        android:text="@string/open"
        android:onClick="openOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/inter"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>